2012-01-26 Stefan Bidigaray <stefanbidi@gmail.com>

        * Source/common.mk: Remove CFStream.h and CFPropertyList.h.
	* Headers/CoreFoundation/CoreFoundation.h: Remove CFPropertyList.h.

2012-01-25 Ivan Vucica <ivan@vucica.net>

        * Source/common.mk: Added missing CFStream.h to list of headers.

2012-01-25 Stefan Bidigaray <stefanbidi@gmail.com>

        * Source/CFDateFormatter.c: Fix bug in 
	CFDateFormatterCreateStringFromAbsoluteTime().
	* Headers/CoreFoundation/CFDateFormatter.h: Include CFDate.h.
	* Tests/CFDateFormatter: Basic tests for CFDateFormatter.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

        * Source/Makefile.nmake:
	* Source/CFString.c:
	* Source/GSPrivate.h:
	* Headers/CoreFoundation/CFString.h:
	* Headers/CoreFoundation/CFBase.h: Fixes for Windows.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

        * Source/CFURL.c: Added class functions.
	* Source/GSPrivate.h: Fix for atomic operations on Windows.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tests/CFArray/mutablearray.m:
	* Tests/CFArray/create.m: Fix tests for 64-bit systems.
	* Tests/CFNumberFormatter/parse.m:
	* Tests/CFRuntime/runtime.m:
	* Tests/CFString/format.m:
	* Tests/CFString/mutablestring.m:
	* Tests/CFString/create.m: Quiet compiler.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* GNUMakefile: Include Tests as a subproject.
	* Tests/GNUmakefile: Add 'make check'.

2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Implmented function to remove dot segments in paths.
	* Tests/CFURL/ref_resolution.m: Added an extra test.

2012-01-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Resolve URIs in CFURLCopyAbsoluteURL().
	* Source/CFString.c: Fixed a few big bugs in CFMutableString.
	* Tests/CFURL/ref_resolution.m: Added a few more tests.

2012-01-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Added a URI parser.
	* Source/GSPrivate.h: Added CHAR_V.